syntax = "proto3";
package file_transport;
option go_package="./file_transport";

message UploadRequest {
    string filename = 1;
    bytes body = 2;
}

message UploadResponse {
    string result = 1;
}

message DownloadRequest {
    string filename = 1;
}

message DownloadResponse {
    string result = 1;
    bytes body = 2;
}

service FileService {
    rpc Upload(UploadRequest) returns (UploadResponse);
    rpc Download(DownloadRequest) returns (DownloadResponse);
}

